COMP-83 Add 'absent' message to subject, correct text-alignment

--- a/custom/themes/composites_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/composites_lib_unb_ca/src/scss/style.scss
@@ -332,7 +332,7 @@ main[role="main"] {
       }
 
       // Paragraph.
-      & p {
+      & .field--name-body p {
         text-align: justify;
       }
 
